// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Azure Storage Account Example renders the Example Storage Account and checks snapshot 1`] = `
"{
  "data": {
    "azurerm_client_config": {
      "CurrentClientConfig": {
      }
    },
    "azurerm_monitor_diagnostic_categories": {
      "storageaccount_diagsettings_diagcategories_FDFFAC42": {
        "resource_id": "\${azurerm_storage_account.storageaccount_5B90F750.id}"
      }
    }
  },
  "output": {
    "resource_group_name": {
      "value": "\${azurerm_resource_group.rg.name}"
    }
  },
  "provider": {
    "azurerm": [
      {
        "features": {
        }
      }
    ]
  },
  "resource": {
    "azurerm_log_analytics_workspace": {
      "log_analytics": {
        "location": "eastus",
        "name": "la-\${var.name}",
        "resource_group_name": "\${azurerm_resource_group.rg.name}"
      }
    },
    "azurerm_monitor_diagnostic_setting": {
      "storageaccount_diagsettings_1F202998": {
        "dynamic": {
          "enabled_log": {
            "content": {
              "category": "\${enabled_log.value}"
            },
            "for_each": "\${tolist(data.azurerm_monitor_diagnostic_categories.storageaccount_diagsettings_diagcategories_FDFFAC42.log_category_types)}"
          },
          "metric": {
            "content": {
              "category": "\${metric.value}"
            },
            "for_each": "\${tolist(data.azurerm_monitor_diagnostic_categories.storageaccount_diagsettings_diagcategories_FDFFAC42.metrics)}"
          }
        },
        "log_analytics_workspace_id": "\${azurerm_log_analytics_workspace.log_analytics.id}",
        "name": "diagsettings",
        "target_resource_id": "\${azurerm_storage_account.storageaccount_5B90F750.id}"
      }
    },
    "azurerm_resource_group": {
      "rg": {
        "location": "eastus",
        "name": "rg-\${var.name}"
      }
    },
    "azurerm_role_assignment": {
      "storageaccount_TfTokenTOKEN31Contributor_role_A0F17938": {
        "principal_id": "\${data.azurerm_client_config.CurrentClientConfig.object_id}",
        "role_definition_name": "Contributor",
        "scope": "\${azurerm_storage_account.storageaccount_5B90F750.id}"
      }
    },
    "azurerm_storage_account": {
      "storageaccount_5B90F750": {
        "access_tier": "Hot",
        "account_replication_type": "LRS",
        "account_tier": "Standard",
        "enable_https_traffic_only": true,
        "is_hns_enabled": true,
        "location": "eastus",
        "min_tls_version": "TLS1_2",
        "name": "teststorageaccount",
        "resource_group_name": "\${azurerm_resource_group.rg.name}"
      }
    }
  },
  "terraform": {
    "required_providers": {
      "azurerm": {
        "source": "azurerm",
        "version": "3.75.0"
      }
    }
  },
  "variable": {
    "name": {
      "default": "test",
      "description": "System name used to randomize the resources",
      "type": "string"
    }
  }
}"
`;

exports[`Azure Storage Account With Defaults renders an Azure Storage Account with defaults and checks snapshot 1`] = `
"{
  "provider": {
    "azurerm": [
      {
        "features": {
        }
      }
    ]
  },
  "resource": {
    "azurerm_resource_group": {
      "storageaccount_rg_F4452564": {
        "location": "eastus",
        "name": "rg-teststorageaccount"
      }
    },
    "azurerm_storage_account": {
      "storageaccount_5B90F750": {
        "access_tier": "Hot",
        "account_replication_type": "LRS",
        "account_tier": "Standard",
        "enable_https_traffic_only": true,
        "is_hns_enabled": true,
        "location": "eastus",
        "min_tls_version": "TLS1_2",
        "name": "teststorageaccount",
        "resource_group_name": "\${azurerm_resource_group.storageaccount_rg_F4452564.name}"
      }
    }
  },
  "terraform": {
    "required_providers": {
      "azurerm": {
        "source": "azurerm",
        "version": "3.75.0"
      }
    }
  }
}"
`;
